<!-- ?xml version="1.0" encoding="utf-8"? -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/border"
        android:src="@drawable/metronome_settings_bg" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:padding="80px" >

        <RelativeLayout
            android:id="@+id/top_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/settings_facebook_logout"
                android:textColor="@color/settings_foreground"
                android:textSize="15sp" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/metronome_btn_tempo_up"
                android:text="@string/logout" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_panel"
            android:layout_gravity="fill_horizontal"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/about"
                android:textColor="@color/settings_foreground"
                android:textSize="15sp" />

            <Button
                android:id="@+id/settings_about_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/about"
                android:textColor="@color/settings_foreground"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>